added basic navbar and footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div>
   <app-nav-main></app-nav-main>
+  <app-footer-main></app-footer-main>
 </div>
 
