added simple jumbotron and slideshow component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
-  <app-nav-main></app-nav-main>
-  <app-footer-main></app-footer-main>
-</div>
 
+<app-nav-main></app-nav-main>
+<app-body></app-body>
+<app-footer-main></app-footer-main>
