--- a/src/footer/footer.component.html
+++ b/src/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="footer">
+<footer class="fixed-bottom bg-dark footer">
   <div class="container text-center">
-    <span class="text-muted">Developed with Angular 4 by Zmote aka Zafer Dogan &#9400;2017</span>
+    <span class="text-muted">Developed with <a href="https://angular.io/">Angular 4</a> by Zmote aka <a href="https://www.linkedin.com/in/zafer-dogan-20133186/">Zafer Dogan</a> &#9400;2017. All rights reserved.</span>
   </div>
 </footer>
