--- a/src/navigation/navigation.component.html
+++ b/src/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-dark">
+<nav class="navbar navbar-light bg-dark fixed-top">
   <ul class="nav nav-pills mx-auto">
     <li class="nav-item mx-2">
       <a class="nav-link" href="#">Home</a>
