--- a/src/appBody/appBody.component.css
+++ b/src/appBody/appBody.component.css
@@ -1,5 +1,17 @@
-.appBody{
-  margin: 0 auto;
-  width:100%;
-  height:100vh;
+.card-img-top{
+  width: 100px;
+}
+
+.card{
+  padding:2rem;
+  width: 100%;
+  height: 100%;
+  /*box-shadow: 0 0 20px rgba(0,0,0,0.1);*/
+}
+
+@media (max-width: 576px){
+  .card{
+    margin-bottom: 1rem;
+    height:auto;
+  }
 }
