--- a/src/navigation/navigation.component.html
+++ b/src/navigation/navigation.component.html
@@ -1,19 +1,51 @@
-<nav class="navbar navbar-light bg-dark fixed-top">
-  <ul class="nav nav-pills mx-auto">
-    <li class="nav-item mx-2">
-      <a class="nav-link" href="#">Home</a>
-    </li>
-    <li class="nav-item mx-2">
-      <a class="nav-link" href="#">3D</a>
-    </li>
-    <li class="nav-item mx-2">
-      <a class="nav-link" href="#">2D</a>
-    </li>
-    <li class="nav-item mx-2">
-      <a class="nav-link" href="#">About</a>
-    </li>
-    <li class="nav-item mx-2">
-      <a class="nav-link" href="#">Contact</a>
-    </li>
-  </ul>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <!--<a class="navbar-brand" href="#">Navbar</a>-->
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mx-auto">
+      <li class="nav-item">
+        <a class="nav-link " href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="#">3D</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="#">2D</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="#">Design</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="#">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="#">Contact</a>
+      </li>
+    </ul>
+  </div>
 </nav>
+<!--<nav class="navbar navbar-light bg-dark fixed-top mx-auto">-->
+  <!--<button class="navbar-toggler d-block d-sm-none" id="barButton" type="button">-->
+    <!--<span class="fa fa-bars"></span>-->
+  <!--</button>-->
+  <!--<ul class="nav nav-pills d-none d-sm-inline-flex" id="navbarSupportedContent">-->
+    <!--<li class="nav-item mx-2">-->
+      <!--<a class="nav-link" href="#">Home</a>-->
+    <!--</li>-->
+    <!--<li class="nav-item mx-2">-->
+      <!--<a class="nav-link" href="#">3D</a>-->
+    <!--</li>-->
+    <!--<li class="nav-item mx-2">-->
+      <!--<a class="nav-link" href="#">2D</a>-->
+    <!--</li>-->
+    <!--<li class="nav-item mx-2">-->
+      <!--<a class="nav-link" href="#">About</a>-->
+    <!--</li>-->
+    <!--<li class="nav-item mx-2">-->
+      <!--<a class="nav-link" href="#">Contact</a>-->
+    <!--</li>-->
+  <!--</ul>-->
+<!--</nav>-->
