--- a/src/slideshow/slideshow.component.css
+++ b/src/slideshow/slideshow.component.css
@@ -1,8 +1,4 @@
-#carouselExampleIndicators{
-  width:100%;
-  height:500px;
+.carousel-item{
+  height:32rem;
   overflow:hidden;
-}
-.carousel-control-next-icon{
-
 }
