--- a/src/slideshow/slideshow.component.html
+++ b/src/slideshow/slideshow.component.html
@@ -1,4 +1,4 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide mx-auto d-none d-sm-block my-auto" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -6,21 +6,42 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="https://orig00.deviantart.net/70e4/f/2017/287/3/f/inktober__013_by_zmote-dbqkvvs.jpg" alt="First slide">
+      <img class="w-100" src="https://orig00.deviantart.net/70e4/f/2017/287/3/f/inktober__013_by_zmote-dbqkvvs.jpg" alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h3>Hello</h3>
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
+          sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+          At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+      </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://img00.deviantart.net/5991/i/2017/286/7/2/inktober__012_by_zmote-dbqi3bx.jpg" alt="Second slide">
+      <img class="w-100" src="https://img00.deviantart.net/5991/i/2017/286/7/2/inktober__012_by_zmote-dbqi3bx.jpg" alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h3>Hello</h3>
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
+          sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+          At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+      </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://img00.deviantart.net/955f/i/2017/289/8/c/some_ship_by_zmote-dbqu6zv.jpg" alt="Third slide">
+      <img class="w-100" src="https://img00.deviantart.net/955f/i/2017/289/8/c/some_ship_by_zmote-dbqu6zv.jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h3>Hello</h3>
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
+          sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+          At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+      </div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="fa fa-angle-left fa-4x" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
   <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="fa fa-angle-right fa-4x" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
 </div>
