--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+.appBody{
+  width:75%;
+  height:100vh;
+}
+
+@media (max-width: 576px){
+  .appBody{
+    position:relative;
+    top:3rem;
+    padding-bottom: 1rem;
+  }
+}
