added simple navigation logic

--- a/src/appBody/appBody.component.html
+++ b/src/appBody/appBody.component.html
@@ -1,12 +1,5 @@
 <app-slide-show></app-slide-show>
-<div class="row d-block d-md-none mx-auto">
-  <div class="col-md-12">
-    <h1>Z-Motions</h1>
-    <p>Some quick example text to build on the card title and make up the bulk of the card's
-      content.</p>
-  </div>
-</div>
-<div class="row mx-auto my-auto">
+<div class="row mx-auto my-auto" id="cardsHolder">
   <div class="col-sm-4">
     <div class="card">
       <img class="card-img-top"
@@ -47,4 +40,3 @@
     </div>
   </div>
 </div>
-
