--- a/src/slideshow/slideshow.component.html
+++ b/src/slideshow/slideshow.component.html
@@ -1,3 +1,10 @@
+<div class="d-block d-md-none mx-auto" id="slideAlternative">
+  <div class="col-md-12">
+    <h1>Z-Motions</h1>
+    <p>Some quick example text to build on the card title and make up the bulk of the card's
+      content.</p>
+  </div>
+</div>
 <div id="carouselExampleIndicators" class="carousel slide mx-auto d-none d-sm-block my-auto" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
