--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <app-nav-main></app-nav-main>
-<app-body class="container-fluid appBody"></app-body>
+<router-outlet></router-outlet>
 <app-footer-main></app-footer-main>
