--- a/src/navigation/navigation.component.html
+++ b/src/navigation/navigation.component.html
@@ -10,7 +10,7 @@
         <a class="nav-link " href="#">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="#">3D</a>
+        <a class="nav-link " routerLink="/3d" routerLinkActive="true">3D</a>
       </li>
       <li class="nav-item">
         <a class="nav-link " href="#">2D</a>
