--- a/src/styles.css
+++ b/src/styles.css
@@ -5,9 +5,10 @@
 }
 
 @media (max-width: 576px){
+  #slideAlternative{
+    margin-top:3.5rem;
+    margin-bottom: -1rem;
+  }
   .appBody{
-    position:relative;
-    top:3rem;
-    padding-bottom: 1rem;
   }
 }
