--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,10 @@
   .appBody{
   }
 }
+
+*{
+  -webkit-transition: all 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
