--- a/src/slideshow/slideshow.component.css
+++ b/src/slideshow/slideshow.component.css
@@ -2,3 +2,53 @@
   height:32rem;
   overflow:hidden;
 }
+
+.carousel-caption{
+  margin-bottom:7rem !important;
+  background-image: linear-gradient(to right, transparent 0%, rgba(0,0,0,0.7) 25%, rgba(0,0,0,0.7) 65%, transparent 100%);
+  /*padding:1rem 10rem;*/
+}
+
+.carousel-caption > h3{
+  font-size:2.4rem;
+}
+
+.carousel-caption > p{
+  font-size:1.2rem;
+  text-shadow: 0 0 10px rgba(0,0,0,0.3) !important;
+  font-family: Quicksand, sans-serif;
+  padding:1rem 8rem;
+}
+
+
+@media (max-width: 576px) {
+  #slideAlternative {
+    margin-top: 3.5rem;
+    margin-bottom: -1rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .carousel-caption > h3{
+    font-size:2rem;
+  }
+
+  .carousel-caption > p{
+    font-size:0.9rem;
+    font-family: Quicksand, sans-serif;
+    padding:1rem 1rem;
+  }
+
+  .carousel-caption{
+    margin-bottom:4.0rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .carousel-caption{
+    margin-bottom:2.5em;
+  }
+  .carousel-caption > p{
+    padding:1rem 1rem;
+  }
+}
