--- a/src/slideshow/slideshow.component.html
+++ b/src/slideshow/slideshow.component.html
@@ -1,5 +1,5 @@
-<div class="d-block d-md-none mx-auto" id="slideAlternative">
-  <div class="col-md-12">
+<div class="d-block d-sm-none mx-auto" id="slideAlternative">
+  <div class="col-md-12 my-auto">
     <h1>Z-Motions</h1>
     <p>Some quick example text to build on the card title and make up the bulk of the card's
       content.</p>
@@ -14,32 +14,24 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="w-100" src="https://orig00.deviantart.net/70e4/f/2017/287/3/f/inktober__013_by_zmote-dbqkvvs.jpg" alt="First slide">
-      <div class="carousel-caption d-none d-md-block">
-        <h3>Hello</h3>
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
-          sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-          At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+      <div class="carousel-caption d-none d-sm-block">
+        <h3>Z-Motions for all your needs</h3>
+        <p>I provide a wide arrange of services, from 3D/2D Animation to Programming of Web and Desktop applications. Whatever your needs, let's figure out a solution together.</p>
       </div>
     </div>
     <div class="carousel-item">
       <img class="w-100" src="https://img00.deviantart.net/5991/i/2017/286/7/2/inktober__012_by_zmote-dbqi3bx.jpg" alt="Second slide">
-      <div class="carousel-caption d-none d-md-block">
-        <h3>Hello</h3>
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
-          sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-          At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+      <div class="carousel-caption d-none d-sm-block">
+        <h3>3D/2D Visuals</h3>
+        <p>I'm a self-taught artist. I've worked in the field for about 4-5 years as a freelancer graphics designer. In my time as a freelancer and in the time after I've accumulated
+        knowledge in various areas. From Logo Designs to 3D/2D Animations, I'm produce the visuals you need.</p>
       </div>
     </div>
     <div class="carousel-item">
       <img class="w-100" src="https://img00.deviantart.net/955f/i/2017/289/8/c/some_ship_by_zmote-dbqu6zv.jpg" alt="Third slide">
-      <div class="carousel-caption d-none d-md-block">
-        <h3>Hello</h3>
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
-          sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-          At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+      <div class="carousel-caption d-none d-sm-block">
+        <h3>Programming</h3>
+        <p>I'm a professional software engineer. From Desktop Applications to Web based solutions, I provide a wide array of services. Let's work out your requirements and deliver you a great product.</p>
       </div>
     </div>
   </div>
