--- a/src/gallery-container/gallery-container.component.html
+++ b/src/gallery-container/gallery-container.component.html
@@ -2,12 +2,8 @@
 
   <section class="jumbotron text-center">
     <div class="container-fluid">
-      <h1 class="jumbotron-heading">3D Gallery</h1>
-      <p class="lead text-muted">Here are some examples of my 3D Work.</p>
-      <!--<p>-->
-        <!--<a href="#" class="btn btn-primary">Main call to action</a>-->
-        <!--<a href="#" class="btn btn-secondary">Secondary action</a>-->
-      <!--</p>-->
+      <h1 class="jumbotron-heading" [innerHtml]="title"></h1>
+      <p class="lead text-muted" [innerHtml]="description">Sample description</p>
     </div>
   </section>
 
@@ -16,27 +12,30 @@
 
       <div class="row thumbs">
         <div class="card col-md-4" data-toggle="modal" data-target="#exampleModalLong" *ngFor="let image of imageArray">
-          <img (click)="loadImage($event)" alt="Thumbnail [100%x280]" style="height: 280px; width: 100%; display: block;" src="{{image}}" data-holder-rendered="true">
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-    <button type="button" class="btn btn-primary float-right" data-dismiss="modal" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <!--<div class="modal-header">-->
-        <!--</div>-->
-        <div class="modal-body">
-          <img src="">
+          <img (click)="loadImage($event)" alt="Thumbnail [100%x280]"
+               style="height: 280px; width: 100%; display: block;" src="{{image}}" data-holder-rendered="true">
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+            content. This content is a little bit longer.</p>
         </div>
       </div>
     </div>
   </div>
 
 </main>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
+     aria-hidden="true">
+  <button type="button" class="btn btn-primary float-right" data-dismiss="modal" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <!--<div class="modal-header">-->
+      <!--</div>-->
+      <div class="modal-body">
+        <img src="">
+      </div>
+    </div>
+  </div>
+</div>
