--- a/src/navigation/navigation.component.html
+++ b/src/navigation/navigation.component.html
@@ -13,10 +13,16 @@
         <a class="nav-link " routerLink="/3d" routerLinkActive="true">3D</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="#">2D</a>
+        <a class="nav-link " routerLink="/2d" routerLinkActive="true">2D</a>
       </li>
       <li class="nav-item">
         <a class="nav-link " href="#">Design</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="#">Concept</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="#">Code</a>
       </li>
       <li class="nav-item">
         <a class="nav-link " href="#">About</a>
