--- a/src/navigation/navigation.component.html
+++ b/src/navigation/navigation.component.html
@@ -16,10 +16,10 @@
         <a class="nav-link " routerLink="/2d" routerLinkActive="true">2D</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="#">Design</a>
+        <a class="nav-link " routerLink="/design" routerLinkActive="true">Design</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="#">Concept</a>
+        <a class="nav-link " routerLink="/concept" routerLinkActive="true">Concept</a>
       </li>
       <li class="nav-item">
         <a class="nav-link " href="#">Code</a>
