--- a/src/slideshow/slideshow.component.html
+++ b/src/slideshow/slideshow.component.html
@@ -13,14 +13,14 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="w-100" src="https://orig00.deviantart.net/70e4/f/2017/287/3/f/inktober__013_by_zmote-dbqkvvs.jpg" alt="First slide">
+      <img class="w-100" src="../assets/img/slideshow/wanna_be_friends__by_zmote-d5rypzq.jpg" alt="First slide">
       <div class="carousel-caption d-none d-sm-block">
         <h3>Z-Motions for all your needs</h3>
         <p>I provide a wide arrange of services, from 3D/2D Animation to Programming of Web and Desktop applications. Whatever your needs, let's figure out a solution together.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="w-100" src="https://img00.deviantart.net/5991/i/2017/286/7/2/inktober__012_by_zmote-dbqi3bx.jpg" alt="Second slide">
+      <img class="w-100" src="../assets/img/slideshow/2d3dgallery_zmf.jpg" alt="Second slide">
       <div class="carousel-caption d-none d-sm-block">
         <h3>3D/2D Visuals</h3>
         <p>I'm a self-taught artist. I've worked in the field for about 4-5 years as a freelancer graphics designer. In my time as a freelancer and in the time after I've accumulated
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img class="w-100" src="https://img00.deviantart.net/955f/i/2017/289/8/c/some_ship_by_zmote-dbqu6zv.jpg" alt="Third slide">
+      <img class="w-100" src="../assets/img/slideshow/programming.jpg" alt="Third slide">
       <div class="carousel-caption d-none d-sm-block">
         <h3>Programming</h3>
         <p>I'm a professional software engineer. From Desktop Applications to Web based solutions, I provide a wide array of services. Let's work out your requirements and deliver you a great product.</p>
