--- a/src/about/about.component.html
+++ b/src/about/about.component.html
@@ -1,9 +1,8 @@
-<div><h1>About</h1></div>
-<div><h1>About</h1></div>
-<div><h1>About</h1></div>
-<div><h1>About</h1></div>
-<div><h1>About</h1></div>
-<div><h1>About</h1></div>
-<div><h1>About</h1></div>
-<div><h1>About</h1></div>
-<div><h1>About</h1></div>
+<main role="main">
+  <section class="jumbotron text-center">
+    <div class="container-fluid">
+      <h1 class="jumbotron-heading">About</h1>
+      <p class="lead text-muted">More about me here.</p>
+    </div>
+  </section>
+</main>
