--- a/src/code/code.component.html
+++ b/src/code/code.component.html
@@ -1,9 +1,8 @@
-<div><h1>Code</h1></div>
-<div><h1>Code</h1></div>
-<div><h1>Code</h1></div>
-<div><h1>Code</h1></div>
-<div><h1>Code</h1></div>
-<div><h1>Code</h1></div>
-<div><h1>Code</h1></div>
-<div><h1>Code</h1></div>
-<div><h1>Code</h1></div>
+<main role="main">
+  <section class="jumbotron text-center">
+    <div class="container-fluid">
+      <h1 class="jumbotron-heading">Coding</h1>
+      <p class="lead text-muted">I'm a professional software engineer. Here are some examples of it.</p>
+    </div>
+  </section>
+</main>
