--- a/src/navigation/navigation.component.html
+++ b/src/navigation/navigation.component.html
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mx-auto">
       <li class="nav-item">
-        <a class="nav-link " routerLink="/" routerLinkActive="true">Home</a>
+        <a class="nav-link" routerLink="/" routerLinkActive="true">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link " routerLink="/3d" routerLinkActive="true">3D</a>
@@ -22,7 +22,7 @@
         <a class="nav-link " routerLink="/concept" routerLinkActive="true">Concept</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " routerLink="/code" routerLinkActive="true">Code</a>
+        <a class="nav-link " routerLink="/code" routerLinkActive="true">Coding</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/about" routerLinkActive="true">About</a>
