added go home buttons

--- a/src/about/about.component.html
+++ b/src/about/about.component.html
@@ -4,5 +4,6 @@
       <h1 class="jumbotron-heading">About</h1>
       <p class="lead text-muted">More about me here.</p>
     </div>
+    <a routerLink="/" routerLinkActive="true" class="btn btn-primary">Go to Home</a>
   </section>
 </main>
