--- a/src/gallery-container/gallery-container.component.html
+++ b/src/gallery-container/gallery-container.component.html
@@ -5,6 +5,7 @@
       <h1 class="jumbotron-heading" [innerHtml]="title"></h1>
       <p class="lead text-muted" [innerHtml]="description">Sample description</p>
     </div>
+    <a routerLink="/" routerLinkActive="true" class="btn btn-primary">Go to Home</a>
   </section>
 
   <div class="album text-muted">
