--- a/src/infocards/infocards.component.html
+++ b/src/infocards/infocards.component.html
@@ -1,14 +1,16 @@
-<div class="row mx-auto my-auto" id="cardsHolder">
+<div class="row mx-auto" id="cardsHolder">
   <div class="col-sm-4">
     <div class="card">
       <img class="card-img-top"
            src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Adobe_Systems_logo_and_wordmark.svg/1200px-Adobe_Systems_logo_and_wordmark.svg.png"
            alt="Card image cap">
       <div class="card-block">
-        <h4 class="card-title">Card title</h4>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h4 class="card-title">Meeting your visual needs</h4>
+        <p class="card-text">From 3D/2D Visuals to 3D/2D Animations, from Logo Designs to Magazine Designs, I provide I wide array of visual work.</p>
+        <a routerLink="/3d" routerLinkActive="true" class="btn btn-primary mb-1">Go to 3D Gallery</a>
+        <a routerLink="/2d" routerLinkActive="true" class="btn btn-primary mb-1">Go to 2D Gallery</a>
+        <a routerLink="/design" routerLinkActive="true" class="btn btn-primary mb-1">Go to Design Gallery</a>
+        <a routerLink="/concept" routerLinkActive="true" class="btn btn-primary mb-1">Go to Concept Gallery</a>
       </div>
     </div>
   </div>
@@ -18,10 +20,9 @@
            src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Adobe_Systems_logo_and_wordmark.svg/1200px-Adobe_Systems_logo_and_wordmark.svg.png"
            alt="Card image cap">
       <div class="card-block">
-        <h4 class="card-title">Card title</h4>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h4 class="card-title">Software solutions of all kind</h4>
+        <p class="card-text">I'm a professional softwar engineer. From Desktop based solutions to Web based solutions, I can provide it for you.</p>
+        <a routerLink="/code" routerLinkActive="true" class="btn btn-primary">Go to Coding section</a>
       </div>
     </div>
   </div>
@@ -31,10 +32,9 @@
            src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Adobe_Systems_logo_and_wordmark.svg/1200px-Adobe_Systems_logo_and_wordmark.svg.png"
            alt="Card image cap">
       <div class="card-block">
-        <h4 class="card-title">Card title</h4>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h4 class="card-title">A flexible workhorse</h4>
+        <p class="card-text">I'm an extra occupational student and therefore are very flexible with my time. Be at in the morning or late at night, I'll finish your work on time.</p>
+        <a  routerLink="/about" routerLinkActive="true" class="btn btn-primary">Go to About section</a>
       </div>
     </div>
   </div>
