--- a/src/code/code.component.html
+++ b/src/code/code.component.html
@@ -4,5 +4,6 @@
       <h1 class="jumbotron-heading">Coding</h1>
       <p class="lead text-muted">I'm a professional software engineer. Here are some examples of it.</p>
     </div>
+    <a routerLink="/" routerLinkActive="true" class="btn btn-primary">Go to Home</a>
   </section>
 </main>
