--- a/src/contact/contact.component.html
+++ b/src/contact/contact.component.html
@@ -4,6 +4,7 @@
       <h1 class="jumbotron-heading">Contact</h1>
       <p class="lead text-muted">You can contact me for work related inquiries with the form below.</p>
     </div>
+    <a routerLink="/" routerLinkActive="true" class="btn btn-primary">Go to Home</a>
   </section>
   <form id="contact-form" method="post" action="" role="form" class="mx-auto">
     <div class="messages"></div>
