changed file sizes + image modal

--- a/src/infocards/infocards.component.html
+++ b/src/infocards/infocards.component.html
@@ -2,10 +2,10 @@
   <div class="col-sm-4">
     <div class="card">
       <img class="card-img-top"
-           src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Adobe_Systems_logo_and_wordmark.svg/1200px-Adobe_Systems_logo_and_wordmark.svg.png"
+           src="../assets/img/symbols/design_symbol.png"
            alt="Card image cap">
       <div class="card-block">
-        <h4 class="card-title">Meeting your visual needs</h4>
+        <h4 class="card-title">Designing your visual needs</h4>
         <p class="card-text">From 3D/2D Visuals to 3D/2D Animations, from Logo Designs to Magazine Designs, I provide I wide array of visual work.</p>
         <a routerLink="/3d" routerLinkActive="true" class="btn btn-primary mb-1">Go to 3D Gallery</a>
         <a routerLink="/2d" routerLinkActive="true" class="btn btn-primary mb-1">Go to 2D Gallery</a>
@@ -17,7 +17,7 @@
   <div class="col-sm-4">
     <div class="card">
       <img class="card-img-top"
-           src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Adobe_Systems_logo_and_wordmark.svg/1200px-Adobe_Systems_logo_and_wordmark.svg.png"
+           src="../assets/img/symbols/design_symbol_s.png"
            alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Software solutions of all kind</h4>
@@ -29,7 +29,7 @@
   <div class="col-sm-4">
     <div class="card">
       <img class="card-img-top"
-           src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Adobe_Systems_logo_and_wordmark.svg/1200px-Adobe_Systems_logo_and_wordmark.svg.png"
+           src="../assets/img/symbols/design_symbol_w_v2.png"
            alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">A flexible workhorse</h4>
