--- a/src/gallery-container/gallery-container.component.css
+++ b/src/gallery-container/gallery-container.component.css
@@ -1,12 +1,10 @@
 main{
   margin-top:2rem;
 }
-.card{
-  padding:1rem;
-}
 
-.thumbs{
-  margin:1rem;
+.col-md-4{
+  padding:0;
+  margin:0;
 }
 
 .thumbs > img{
@@ -15,36 +13,53 @@ main{
   width:auto;
 }
 
-img{
-  margin-bottom:1rem;
-}
-
 .card:hover{
-  color:white;
-  background-color:#333333;
-}
-
-#exampleModalLong{
-  padding:2rem;
-  margin:0 auto;
+  filter: brightness(50%);
 }
 
 #exampleModalLong img{
-  width:100%;
-  overflow: scroll;
-  box-shadow: 0 100px 450px black;
-  margin:auto 0 !important;
+  width:auto;
+  max-height:88vh;
+  max-width: 100vw;
+  filter: drop-shadow(0 0 150px black);
 }
 
-#exampleModalLong, .modal-dialog, .modal-content, .modal-body{
+#exampleModalLong, .modal-dialog, .modal-content{
   width:100%;
-  max-width: 100%;
+}
+
+.modal-dialog{
+  margin:0;
+  max-width:none;
+  width:100%;
+}
+
+#exampleModalLong > .modal-dialog{
+  display:flex !important;
+  align-content: center;
+  justify-content: center;
+}
+
+.modal-body{
+  align-content: center;
+  flex:0 0;
+}
+
+@media (max-width: 576px){
+  .modal-body{
+    align-content: center;
+    flex:1 1;
+  }
+}
+
+.modal-body > img{
+  align-self: center;
 }
 
 .closeButton > span{
   color:white;
 }
 
-.modal-body{
-  padding:0;
+.jumbotron{
+  margin-bottom: 0;
 }
