--- a/src/gallery-container/gallery-container.component.html
+++ b/src/gallery-container/gallery-container.component.html
@@ -13,8 +13,8 @@
 
       <div class="row thumbs">
         <div class="card col-md-4" data-toggle="modal" data-target="#exampleModalLong" *ngFor="let image of imageArray">
-          <img (click)="loadImage($event)" alt="Thumbnail [100%x280]"
-               style="height: 280px; width: 100%; display: block;" src="{{image}}" data-holder-rendered="true">
+          <img (click)="loadImage($event)" alt="Gallery picture"
+               style="height:280px;" src="{{image}}" data-holder-rendered="true">
         </div>
       </div>
     </div>
@@ -29,12 +29,8 @@
     <span aria-hidden="true">&times;</span>
   </button>
   <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <!--<div class="modal-header">-->
-      <!--</div>-->
-      <div class="modal-body">
-        <img src="">
-      </div>
+    <div class="modal-body">
+      <img src="">
     </div>
   </div>
 </div>
