--- a/src/about/about.component.css
+++ b/src/about/about.component.css
@@ -1,3 +1,17 @@
 main{
   margin-top:3rem;
 }
+
+.portrait{
+  height:150px;
+  border-radius: 20rem 20rem;
+}
+.aboutSection{
+  padding:0 10vw 3rem 10vw;
+}
+
+@media (max-width: 576px){
+  .aboutSection{
+    padding:0 5vw 4rem 5vw;
+  }
+}
