--- a/src/gallery-container/gallery-container.component.html
+++ b/src/gallery-container/gallery-container.component.html
@@ -10,11 +10,10 @@
 
   <div class="album text-muted">
     <div class="container-fluid">
-
       <div class="row thumbs">
-        <div class="card col-md-4" data-toggle="modal" data-target="#exampleModalLong" *ngFor="let image of imageArray">
+        <div class="card col-md-3" data-toggle="modal" data-target="#exampleModalLong" *ngFor="let image of imageArray">
           <img (click)="loadImage($event)" alt="Gallery picture"
-               style="height:280px;" src="{{image}}" data-holder-rendered="true">
+               style="height:280px; width:100%" src="{{image}}" data-holder-rendered="true">
         </div>
       </div>
     </div>
