fixed some issues on contact component

--- a/src/about/about.component.html
+++ b/src/about/about.component.html
@@ -14,7 +14,7 @@
           <h1>Who am I?</h1>
           <p>Hi, my name is Zafer Dogan. I'm a 28 years old Software Engineer / Freelance Graphic Designer / Self-Taught Artist from Switzerland. Over the past ten years, I've had the opportunity
           to build up a wide arrange of skills due to different projects I was involved in. I'm now in my last semester at the HSR and am in-between fulltime jobs, which is why I've setup this
-          portfolio / "services I offer" page to take on small to middle sized projects on the side. I'm a very flexible with my time and can accomodate you from wherever you are. I'm looking forward to work with you.
+          portfolio / "services I offer" page to take on small to middle sized projects on the side. I'm very flexible with my time and can accommodate you from wherever you are. I'm looking forward to work with you.
           </p>
           <a routerLink="/contact" routerLinkActive="true" class="btn btn-primary align-self-center mx-auto">Contact me</a>
         </div>
