--- a/src/navigation/navigation.component.html
+++ b/src/navigation/navigation.component.html
@@ -7,51 +7,29 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mx-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/" routerLinkActive="true">Home</a>
+        <a class="nav-link" routerLink="/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " routerLink="/3d" routerLinkActive="true">3D</a>
+        <a class="nav-link" routerLink="/3d">3D</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " routerLink="/2d" routerLinkActive="true">2D</a>
+        <a class="nav-link" routerLink="/2d">2D</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " routerLink="/design" routerLinkActive="true">Design</a>
+        <a class="nav-link" routerLink="/design">Design</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " routerLink="/concept" routerLinkActive="true">Concept</a>
+        <a class="nav-link" routerLink="/concept">Concept</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " routerLink="/code" routerLinkActive="true">Coding</a>
+        <a class="nav-link" routerLink="/code">Coding</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/about" routerLinkActive="true">About</a>
+        <a class="nav-link" routerLink="/about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/contact" routerLinkActive="true">Contact</a>
+        <a class="nav-link" routerLink="/contact">Contact</a>
       </li>
     </ul>
   </div>
 </nav>
-<!--<nav class="navbar navbar-light bg-dark fixed-top mx-auto">-->
-  <!--<button class="navbar-toggler d-block d-sm-none" id="barButton" type="button">-->
-    <!--<span class="fa fa-bars"></span>-->
-  <!--</button>-->
-  <!--<ul class="nav nav-pills d-none d-sm-inline-flex" id="navbarSupportedContent">-->
-    <!--<li class="nav-item mx-2">-->
-      <!--<a class="nav-link" href="#">Home</a>-->
-    <!--</li>-->
-    <!--<li class="nav-item mx-2">-->
-      <!--<a class="nav-link" href="#">3D</a>-->
-    <!--</li>-->
-    <!--<li class="nav-item mx-2">-->
-      <!--<a class="nav-link" href="#">2D</a>-->
-    <!--</li>-->
-    <!--<li class="nav-item mx-2">-->
-      <!--<a class="nav-link" href="#">About</a>-->
-    <!--</li>-->
-    <!--<li class="nav-item mx-2">-->
-      <!--<a class="nav-link" href="#">Contact</a>-->
-    <!--</li>-->
-  <!--</ul>-->
-<!--</nav>-->
