--- a/src/contact/contact.component.html
+++ b/src/contact/contact.component.html
@@ -54,7 +54,7 @@
             <div class="help-block with-errors"></div>
           </div>
         </div>
-        <div class="col-md-12">
+        <div class="col-md-12 mb-5">
           <input type="submit" class="btn btn-success btn-send" value="Send message">
         </div>
       </div>
