finished coding section

--- a/src/code/code.component.css
+++ b/src/code/code.component.css
@@ -1,3 +1,15 @@
 main{
   margin-top:3rem;
 }
+
+.thumbnail-image{
+  width:100%;
+  height:auto;
+}
+
+@media (max-width: 768px){
+  .thumbnail-image{
+    height:auto;
+    width:100%;
+  }
+}
