--- a/src/code/code.component.html
+++ b/src/code/code.component.html
@@ -1,9 +1,87 @@
-<main role="main">
+<main role="main" class="mb-5">
   <section class="jumbotron text-center">
     <div class="container-fluid">
       <h1 class="jumbotron-heading">Coding</h1>
-      <p class="lead text-muted">I'm a professional software engineer. Here are some examples of it.</p>
+      <p class="lead text-muted">I'm a professional software engineer. Here are some projects I worked on.</p>
     </div>
     <a routerLink="/" routerLinkActive="true" class="btn btn-primary">Go to Home</a>
+  </section>
+  <section class="container-fluid w-75">
+    <div class="row">
+      <div class="col-md-3">
+        <a href="https://github.com/Zmote" target="_blank">
+        <img class="thumbnail-image" src="../assets/img/github.png">
+        </a>
+      </div>
+      <div class="col-md-9 align-self-center">
+        <h1>Github</h1>
+        <p>In my free time I work on personal projects, learning new frameworks, experimenting and preparing assignments
+          for some of my "students" I instruct over at the
+          <a href="http://it-club-oberland.ch/" target="_blank">IT Club</a>. On here you may have a look at some of my code. Go to my
+          Github Repository from <a href="https://github.com/Zmote" target="_blank">here</a>.</p>
+      </div>
+    </div>
+  </section>
+  <hr>
+  <section class="container-fluid w-75">
+    <div class="row">
+      <div class="col-md-3">
+        <a href="http://it-club-oberland.ch/" target="_blank">
+        <img class="thumbnail-image" src="../assets/img/pages/itclub_page.png">
+        </a>
+      </div>
+      <div class="col-md-9 align-self-center">
+        <h1>IT Club</h1>
+        <p>In my work with the IT Club, an initiative to enhance IT knowledge in our locality, I've had the chance to prepare our blog and the IT Club Webpage. The
+          <a href="http://it-club-oberland.ch/" target="_blank">IT Club Webpage</a> was developed with WordPress and combines many of our social presence.</p>
+      </div>
+    </div>
+  </section>
+  <hr>
+  <section class="container-fluid w-75">
+    <div class="row">
+      <div class="col-md-3">
+        <a href="/" target="_blank">
+        <img class="thumbnail-image" src="../assets/img/pages/z-motions.png">
+        </a>
+      </div>
+      <div class="col-md-9 align-self-center">
+        <h1>Z-Motions</h1>
+        <p>I've developed this site with Angular4 and the Bootstrap4 Framework.</p>
+      </div>
+    </div>
+  </section>
+  <hr>
+  <section class="container-fluid w-75">
+    <div class="row">
+      <div class="col-md-3">
+        <a href="https://github.com/Zmote/SA---RAD-LogShark" target="_blank">
+        <img class="thumbnail-image" src="../assets/img/pages/main_view_multiWindow_colored_settings.png">
+        </a>
+      </div>
+      <div class="col-md-9 align-self-center">
+        <h1>LogShark</h1>
+        <p>During my term project I got the opportunity to develop a high performance logging application with Qt and C++. The application receives log data via the network and handles
+          multiple inputs from multiple applications, thus making a centralized log analysis possible. Parts of the code for the application are on my GitHub repository
+          <a href="https://github.com/Zmote/SA---RAD-LogShark" target="_blank">here</a>.</p>
+      </div>
+    </div>
+  </section>
+  <hr>
+  <section class="container-fluid w-75">
+    <div class="row">
+      <div class="col-md-3">
+        <a href="http://www.tomate-effretikon.ch/" target="_blank">
+        <img class="thumbnail-image" src="../assets/img/pages/restaurant_tomate.png">
+        </a>
+      </div>
+      <div class="col-md-9 align-self-center">
+        <h1>Restaurant Tomate</h1>
+        <p>One of my earliest acquaintance in the IT world was with the <a href="http://intelligentworks.ch/" target="_blank">intelligentworks dogan company</a>.
+        After my internship there, we kept in touch and worked on various different projects together. One of those projects was the website of Restaurant Tomate
+          <a href="http://www.tomate-effretikon.ch/" target="_blank">http://www.tomate-effretikon.ch/</a>. This site was developed with the Bootstrap Framework and the doT.js JavaScript
+        Template Engine.</p>
+      </div>
+    </div>
   </section>
 </main>
