--- a/src/about/about.component.html
+++ b/src/about/about.component.html
@@ -2,21 +2,50 @@
   <section class="jumbotron text-center">
     <div class="container-fluid">
       <h1 class="jumbotron-heading">About</h1>
-      <p class="lead text-muted">More about me here.</p>
+      <p class="lead text-dark">More about me here.</p>
     </div>
     <a routerLink="/" routerLinkActive="true" class="btn btn-primary">Go to Home</a>
+    <a routerLink="/contact" routerLinkActive="true" class="btn btn-primary align-self-center mx-auto">Contact me</a>
   </section>
-  <section class="container-fluid">
+  <section class="container-fluid aboutSection">
     <div class="row">
       <div class="col-md-12">
-        <div class="mx-auto text-center text-justify aboutSection">
+        <div class="mx-auto text-center text-justify">
           <img src="../assets/img/portrait.jpg" class="portrait mb-2">
           <h1>Who am I?</h1>
           <p>Hi, my name is Zafer Dogan. I'm a 28 years old Software Engineer / Freelance Graphic Designer / Self-Taught Artist from Switzerland. Over the past ten years, I've had the opportunity
           to build up a wide arrange of skills due to different projects I was involved in. I'm now in my last semester at the HSR and am in-between fulltime jobs, which is why I've setup this
           portfolio / "services I offer" page to take on small to middle sized projects on the side. I'm very flexible with my time and can accommodate you from wherever you are. I'm looking forward to work with you.
           </p>
-          <a routerLink="/contact" routerLinkActive="true" class="btn btn-primary align-self-center mx-auto">Contact me</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="mx-auto text-center text-justify aboutSection">
+          <h1>What tools do I use?</h1>
+          <div class="col-md-12">
+            <div class="mx-auto text-center my-md-2 portrait-tool">
+              <img src="../assets/img/toolThumbs/photoshop.png">
+              <img src="../assets/img/toolThumbs/illustrator.png">
+              <img src="../assets/img/toolThumbs/indesign.png">
+              <img src="../assets/img/toolThumbs/aftereffects.png">
+              <img src="../assets/img/toolThumbs/premiere.png">
+              <img src="../assets/img/toolThumbs/animate.png">
+              <img src="../assets/img/toolThumbs/maya.jpg">
+              <img src="../assets/img/toolThumbs/blender.png">
+              <img src="../assets/img/toolThumbs/sketchup.png">
+              <img src="../assets/img/toolThumbs/webstorm.jpg">
+              <img src="../assets/img/toolThumbs/phpstorm.png">
+              <img src="../assets/img/toolThumbs/intellijidea.jpg">
+              <img src="../assets/img/toolThumbs/clion.jpg">
+            </div>
+          </div>
+          <p>For visual work, I usually use the entire Adobe Collection, from Photoshop, Illustrator, InDesign to After Effects, Premiere and Animate. For Coding, I usually rely on the Jetbrains
+          product family, from Webstorm, PHPStorm to IntelliJ IDEA, CLion and the sort. For 3D Work I usually use Autodesk Maya LT, Blender or Google SketchUP. I'm generally quick to leanr new software
+          as the need rises.</p>
         </div>
       </div>
     </div>
