--- a/src/code/code.component.html
+++ b/src/code/code.component.html
@@ -2,7 +2,7 @@
   <section class="jumbotron text-center">
     <div class="container-fluid">
       <h1 class="jumbotron-heading">Coding</h1>
-      <p class="lead text-muted">I'm a professional software engineer. Here are some projects I worked on.</p>
+      <p class="lead text-dark">I'm a professional software engineer. Here are some projects I worked on and my repo.</p>
     </div>
     <a routerLink="/" routerLinkActive="true" class="btn btn-primary">Go to Home</a>
   </section>
