--- a/src/contact/contact.component.html
+++ b/src/contact/contact.component.html
@@ -12,11 +12,10 @@
   <section class="container-fluid cards">
     <div class="row mx-auto text-center">
       <h2 class="col-md-12">What are my rates?</h2>
-      <p class="col-md-12">As my proficiency is different from subject to subject, I charge differently depending on the
+      <p class="col-md-8 mx-auto">As my proficiency is different from subject to subject, I charge differently depending on the
         project type. Below are some rates to give you an idea of how much I charge what kind of projects.
         All rates are hourly rates. Keep in mind, these are only estimates.</p>
     </div>
-    <hr>
     <div class="row mx-auto">
       <div class="card col-md-2">
         <img class="card-img-top" src="../assets/img/symbols/design_symbol.png" alt="Card image cap">
