--- a/src/gallery-container/gallery-container.component.html
+++ b/src/gallery-container/gallery-container.component.html
@@ -3,7 +3,7 @@
   <section class="jumbotron text-center">
     <div class="container-fluid">
       <h1 class="jumbotron-heading" [innerHtml]="title"></h1>
-      <p class="lead text-muted" [innerHtml]="description">Sample description</p>
+      <p class="lead text-dark" [innerHtml]="description">Sample description</p>
     </div>
     <a routerLink="/" routerLinkActive="true" class="btn btn-primary">Back to Home</a>
   </section>
